[gd_scene load_steps=3 format=3 uid="uid://cvk8fuhdj34sp"]

[ext_resource type="Texture2D" uid="uid://voks3yy7c482" path="res://scenes/menu/logo.png" id="1_0wqlp"]
[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_gw240"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gw240")

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(16, 24)
texture = ExtResource("1_0wqlp")
centered = false

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 224.0
offset_right = 150.0
offset_bottom = 290.0
theme_override_font_sizes/font_size = 42
text = "START"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 869.0
offset_right = 110.0
offset_bottom = 935.0
theme_override_font_sizes/font_size = 42
text = "EXIT"

[node name="sensetivity" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 304.0
offset_right = 256.0
offset_bottom = 362.0
theme_override_font_sizes/font_size = 42
text = "SENSITIVITY"

[node name="control" type="HSlider" parent="sensetivity"]
layout_mode = 0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 64.0
min_value = 0.1
max_value = 1.0
step = 0.02
value = 0.1

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="drag_ended" from="sensetivity/control" to="." method="_on_control_drag_ended"]
